--- a/_sass/_includes/_listing.scss
+++ b/_sass/_includes/_listing.scss
@@ -31,9 +31,8 @@
 	}
 
 	&:hover {
-		
 		.post__image {
-			@include scale(1.2);
+			@include scale(1.0);
 		}
 
 		.post__content {
@@ -46,9 +45,7 @@
 	}
 
 	&:nth-child(2n) {
-
 		@include mq(tabletl) {
-
 			.post__image-wrap {
 				left: auto;
 				right: 0;
@@ -65,6 +62,20 @@
 		}
 	}
 }
+
+.post__image {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	@include transition(all 1s cubic-bezier(0.2, 0.3, 0, 1));
+	@include scale(1.1); // Zoomed to 1.1x by default
+}
+
 
 .post__image-wrap {
 	position: relative;
@@ -106,7 +117,7 @@
 	@include mq(tabletp) {
 		padding: 0 30px 30px;
 	}
-	
+
 	@include mq(tabletl) {
 		float: right;
 		padding: 30px 30px 30px 0;
@@ -126,7 +137,7 @@
 		margin-top: -30px;
 		padding: 30px;
 	}
-	
+
 	@include mq(tabletl) {
 		margin: 0 0 0 -30px;
 		min-height: 400px;
@@ -134,7 +145,7 @@
 }
 
 .post__title {
-	
+
 	a {
 		font-weight: $h2-weight;
 	}
