--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,31 +2,27 @@
 layout: default
 ---
 
+<script
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+    type="text/javascript"
+></script>
+
 <section class="hero hero--single">
+    <div
+        class="hero__image"
+        style="background-image: url({{ page.featured_image | relative_url }})"
+    >
+        <div class="hero__overlay"></div>
+    </div>
 
-	<div class="hero__image" style="background-image: url({{ page.featured_image | relative_url }})">
-		<div class="hero__overlay"></div>
-	</div>
-
-	<div class="wrap">
-
-		<h1>{{ page.title }}</h1>
-		<p>{{ page.date | date_to_long_string }}</p>
-
-	</div>
-
+    <div class="wrap">
+        <h1>{{ page.title }}</h1>
+        <p>{{ page.date | date_to_long_string }}</p>
+    </div>
 </section>
 
 <section class="single">
-
-	<div class="wrap">
-
-		<article class="single-post">
-
-			{{ page.content }}
-
-		</article>
-
-	</div>
-
+    <div class="wrap">
+        <article class="single-post">{{ page.content }}</article>
+    </div>
 </section>
