added fusion luts tutorial

--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -2,6 +2,11 @@
 layout: default
 ---
 
+<script
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+    type="text/javascript"
+></script>
+
 <section class="hero hero--single">
 
 	<div class="hero__image" style="background-image: url({{ page.featured_image | relative_url }})">
